Updated experiment back-end.

--- a/experiments/experiment_1.html
+++ b/experiments/experiment_1.html
@@ -180,6 +180,7 @@
 
     <div id="thanks" class="slide js">
         <p class="big">Thank you for your time!</p>
+        <div class="end"></div>
     </div>
 
     <div class="progress">
