Updated experiment_1 introduction.

--- a/experiments/experiment_1.html
+++ b/experiments/experiment_1.html
@@ -69,7 +69,8 @@
     <!-- Instruction slides. -->
     <div class="slide" id="introduction_0">
         <h3>Introduction</h3>
-        <p align="left" style="text-indent:40px">In this experiment, you will see many bird's-eye view images of a person (the dot) standing in a room, like below:</p>
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">In this experiment, you will see many bird's-eye view images of a person (the dot) standing in a room, like below:</p>
+        <br>
         <div class="stimulus">
             <img style="height:250px;width:auto;" src="../stimuli/experiment_1/introduction_0.png"></img>
         </div>
@@ -78,7 +79,8 @@
     </div>
     <div class="slide" id="introduction_1">
         <h3>Introduction</h3>
-        <p align="left" style="text-indent:40px">Inside of each room are 3 labeled corners and <b>up to</b> 3 labeled doors. The corners are labeled <span style="font-family:Lucida Console;">A</span>, <span style="font-family:Lucida Console;">B</span>, and <span style="font-family:Lucida Console;">C</span> and the doors are labeled <span style="font-family:Lucida Console";>1</span>, <span style="font-family:Lucida Console";>2</span>, and <span style="font-family:Lucida Console";>3</span>. Pay particular attention to the door numbers since Door <span style="font-family:Lucida Console";>1</span> in one room may not be Door <span style="font-family:Lucida Console";>1</span> in the next.
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">Each room contains 3 labeled corners. The corners are labeled <span style="font-family:Lucida Console;">A</span>, <span style="font-family:Lucida Console;">B</span>, and <span style="font-family:Lucida Console;">C</span>.</p>
+        <br><br>
         <div class="stimulus">
             <img style="height:250px;width:auto;" src="../stimuli/experiment_1/introduction_1.png"></img>
         </div>
@@ -86,7 +88,8 @@
     </div>
     <div class="slide" id="introduction_2">
         <h3>Introduction</h3>
-        <p align="left" style="text-indent:40px">In addition to multiple doors, some rooms will also have gray walls. People can move horizontally or vertically in the room to get around the gray walls, but they cannot walk through them or walk diagonally.</p>
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">Each room also contains <b>up to</b> 3 labeled doors. The doors are labeled <span style="font-family:Lucida Console";>1</span>, <span style="font-family:Lucida Console";>2</span>, and <span style="font-family:Lucida Console";>3</span>. Pay particular attention to the door numbers since Door <span style="font-family:Lucida Console";>1</span> in one room may not be Door <span style="font-family:Lucida Console";>1</span> in the next.</p>
+        <br>
         <div class="stimulus">
             <img style="height:250px;width:auto;" src="../stimuli/experiment_1/introduction_2.png"></img>
         </div>
@@ -94,21 +97,32 @@
     </div>
     <div class="slide" id="introduction_3">
         <h3>Introduction</h3>
-        <p align="left" style="text-indent:40px">Each image displays people walking towards one of the three corners in the room. People always know where the labeled corners are and only ever going after one corner.</p>
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">Some rooms will have gray walls. People can move horizontally or vertically in the room to get around the gray walls, but they cannot walk through them or walk diagonally.</p>
+        <br>
         <div class="stimulus">
-            <img style="height:250px;width:auto;" src="../stimuli/experiment_1/introduction_2.png"></img>
+            <img style="height:250px;width:auto;" src="../stimuli/experiment_1/introduction_3.png"></img>
         </div>
         <button onclick="_s.button()">Continue</button>
     </div>
     <div class="slide" id="introduction_4">
         <h3>Introduction</h3>
-        <p align="left" style="text-indent:40px">In each trial, you will not see the grid lines, though everything previously mentioned still applies.</p>
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">In every image you see, people will be walking towards one of the three corners in the room. People always know where the labeled corners are, despite any walls, and only ever go after one corner.</p>
+        <br>
         <div class="stimulus">
-            <img style="height:250px;width:auto;border:1px solid black;" src="../stimuli/experiment_1/introduction_4.png"></img>
+            <img style="height:150px;width:auto;" src="../stimuli/experiment_1/introduction_4.png"></img>
         </div>
         <button onclick="_s.button()">Continue</button>
     </div>
     <div class="slide" id="introduction_5">
+        <h3>Introduction</h3>
+        <p align="left" style="text-indent:40px;margin-bottom:0px;">In each trial, you will not see the grid lines, though everything previously mentioned still applies.</p>
+        <br>
+        <div class="stimulus">
+            <img style="height:250px;width:auto;border:1px solid black;" src="../stimuli/experiment_1/introduction_5.png"></img>
+        </div>
+        <button onclick="_s.button()">Continue</button>
+    </div>
+    <div class="slide" id="introduction_6">
         <h3>Introduction</h3>
         <p>In this experiment, your task is to figure out:</p>
         <ul style="text-align:left;">
@@ -116,7 +130,7 @@
             <li>Which corner this person was going for (from "definitely not" to "definitely" for each corner <span style="font-family:Lucida Console";>A</span>, <span style="font-family:Lucida Console";>B</span>, and <span style="font-family:Lucida Console";>C</span>)</li>
             
         </ul>
-        <p>As a reminder, the agent cannot walk through the gray walls or walk diagonally.</p>
+        <p>As a reminder, people cannot walk through the walls or walk diagonally.</p>
         <p>There are <span class="num_trials"></span> trials in total. Press Continue to begin.</p>
         <button onclick="_s.button()">Continue</button>
     </div>
