Finished experiment_1. Have to go back to clean repo, but for now starting experiment_2.

--- a/experiments/experiment_1.html
+++ b/experiments/experiment_1.html
@@ -224,9 +224,8 @@
     <div class="progress">
         <span>Progress:</span>
         <div class="bar-wrapper">
-            <div class="bar" width="0%">
+            <div class="bar" width="0%"></div>
         </div>
     </div>
-  </div>
 </body>
 </html>
